<resources>
    <string name="app_name">Student Assistant</string>
    <string name="splash_text">StudentAssistant</string>
    <string name="todo">TODO</string>
    <string name="logo">LOGO</string>
    <string name="skipintro">Skip Intro</string>
    <string name="hello_blank_fragment">HELLO</string>
    <string name="fragmentfirstscreentitle">CLASSES</string>
    <string name="fragmentfirstscreendescription">Going about classroom activities should be hassle free.</string>
    <string name="fragmentthirdscreendescription">Stay on top of your tests.</string>
    <string name="fragmentthirdscreentitle">TESTS</string>
    <string name="fragmentfirstscreennext">NEXT</string>
    <string name="fragmentsecondscreentitle">REMINDERS</string>
    <string name="frragmentsecondscreendescription">Don\'t worry about due dates I\'ve got that covered for you.</string>
    <string name="finish">FINISH</string>
    <string name="welcome">WELCOME</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="intro_title">STUDENT ASSISTANT</string>
    <string name="place_holder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="intro_register">REGISTER</string>>
    <string name="intro_login">LOG IN</string>
    <string name="or">OR</string>
    <string name="email_hint">Enter Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_hint">Enter Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="redirect_login_page">Log In Instead</string>
    <string name="redirect_signup_page">No account? Register</string>
    <string name="type_message">Type your message...</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_out">Log Out</string>
    <string name="exit">Exit</string>
    <string name="hint_username">Enter Username</string>
    <string name="remember_me">Remember Me</string>
    <string name="password_reset">Password Reset</string>
    <string name="submit">SUBMIT</string>
    <string name="instructions">An email has been sent to you with instructions on how to reset your password.Check your spam folder as well.</string>
    <string name="sent">SENT!</string>
    <string name="check_email">Check your Email for instructions.</string>
    <string name="role">Select Role</string>
    <string-array name="roles">
        <item>Student</item>
        <item>Lecturer</item>
    </string-array>
    <string name="announcement_title">Announcements</string>
    <string name="reminders_title">Reminders</string>
    <string name="notes_title">Notes</string>
    <string name="assignments_title">Assignments</string>
    <!-- scroll view behaviour for coordinator layout -->
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <!-- Get in touch with the developer-->
    <string name="contact">Get in touch with the developer:</string>
    <string name="dev_email">borisochola32@gmail.com</string>


</resources>