<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".logins.GetEmailFragment">

    <ImageView
        android:id="@+id/password_reset_header"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="42dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_password_reset" />
    <TextView
        android:id="@+id/get_email_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_reset_header"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:text="@string/password_reset"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/get_email_paragraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/get_email_heading"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:text="@string/instructions"
        android:textSize="20sp"
        android:textStyle="normal"
        android:layout_gravity="center"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutGetEmail"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/get_email_paragraph"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:hint="@string/email_hint"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:startIconDrawable="@drawable/ic_email">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditTextGetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/submit_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/textInputLayoutGetEmail"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="DuplicateSpeakableTextCheck" />
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/circular_progress_bar"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        app:indicatorColor="@color/md_theme_light_primary"
        app:hideAnimationBehavior="none"/>


</RelativeLayout>