<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_students_cap" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/intro_title"
        android:textAllCaps="true"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:gravity="center"
        android:text="@string/intro_description"
        android:textColor="#546E7A"
        android:textSize="16sp" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="50dp" />

    <Button
        android:id="@+id/bt_log_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/bt_register"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:text="@string/intro_login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        tools:ignore="TextContrastCheck" />
</RelativeLayout>