<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logins.EmailSentFragment">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_cancel"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_baseline_close_24"
        android:background="@color/md_theme_light_onPrimary"/>

    <ImageView
        android:id="@+id/email_sent_header"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="42dp"
        android:layout_below="@+id/bt_cancel"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_sent" />
    <TextView
        android:id="@+id/sent_email_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_sent_header"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:text="@string/sent"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/sent_email_paragraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sent_email_heading"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:text="@string/instructions"
        android:textSize="20sp"
        android:textStyle="normal"
        android:layout_gravity="center"/>




</RelativeLayout>