<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/log_in_page_header"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_log_in" />

    <TextView
        android:id="@+id/login_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_in_page_header"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:text="@string/intro_login"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmailLogIn"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_heading"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:hint="@string/email_hint"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:counterEnabled="true"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEmailLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPasswordLogin"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayoutEmailLogIn"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:hint="@string/password_hint"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:counterEnabled="true"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPasswordLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_log_in_page"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/textInputLayoutPasswordLogin"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:text="@string/intro_login"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_log_in_page"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/redirect_signup_page"
        android:textStyle="bold" />


</RelativeLayout>